Partially refactor identity areas logic into controllers

--- a/EweForum/Views/Shared/Components/Header/Default.cshtml
+++ b/EweForum/Views/Shared/Components/Header/Default.cshtml
@@ -36,7 +36,7 @@
         else
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" aria="active" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                <a class="nav-link text-dark" aria="active" id="register" asp-controller="Account" asp-action="Register">Register</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark" aria="active" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
