--- a/EweForum/wwwroot/css/main.css
+++ b/EweForum/wwwroot/css/main.css
@@ -63,3 +63,19 @@ main .form-button{
     background-color:lightpink;
     float:right
 }
+main .custom-p{
+    font-weight:400;
+    color:deeppink;
+}
+main .form-modal {
+    display: flex;
+    flex-direction: column;
+    justify-items:center;
+    justify-content:center;
+    width: 40%;
+    height: auto;
+    z-index: 1;
+    box-shadow: 2px 5px 16px -3px rgba(96,36,56,0.59);
+    -webkit-box-shadow: 2px 5px 16px -3px rgba(96,36,56,0.59);
+    -moz-box-shadow: 2px 5px 16px -3px rgba(96,36,56,0.59);
+}
