--- a/EweForum/Views/Account/Login.cshtml
+++ b/EweForum/Views/Account/Login.cshtml
@@ -1,10 +1,7 @@
-﻿
-@model LoginModel
-
+﻿@model LoginModel
 @{
     ViewData["Title"] = "Log in";
 }
-
 
 <h1 class="form-heading text-center">@ViewData["Title"]</h1>
 <section id="login">
@@ -14,12 +11,12 @@
 
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-field">
-                    <input asp-for="Input.Email" class="form-input" placeholder="email" autocomplete="username" aria-required="true" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    <input asp-for="@Model.Input.Email" class="form-input" placeholder="email" autocomplete="email" aria-required="true" />
+                    <span asp-validation-for="@Model.Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-field">
-                    <input asp-for="Input.Password" placeholder="password" class="form-input" autocomplete="current-password" aria-required="true" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    <input asp-for="@Model.Input.Password" placeholder="password" class="form-input" autocomplete="current-password" aria-required="true" />
+                    <span asp-validation-for="@Model.Input.Password" class="text-danger"></span>
                 </div>
                 <div>
                     <button id="login-submit" type="submit" class="form-button">Log in</button>
