--- a/EweForum/Views/Shared/Components/Header/Default.cshtml
+++ b/EweForum/Views/Shared/Components/Header/Default.cshtml
@@ -28,9 +28,7 @@
                 <a class="nav-link" >Post</a>
             </li>
             <li class="nav-item">
-                <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-                </form>
+                <a class="nav-link text-dark" aria="active" id="logout" asp-controller="Account" asp-action="Logout">Logout</a>
             </li>
         }
         else
@@ -39,7 +37,7 @@
                 <a class="nav-link text-dark" aria="active" id="register" asp-controller="Account" asp-action="Register">Register</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-dark" aria="active" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                <a class="nav-link text-dark" aria="active" id="login" asp-controller="Account" asp-action="Login">Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-dark" aria="active">Browse</a>
