--- a/EweForum/Views/Account/Login.cshtml
+++ b/EweForum/Views/Account/Login.cshtml
@@ -5,24 +5,25 @@
 
 <h1 class="form-heading text-center">@ViewData["Title"]</h1>
 <section id="login">
-    <div class="form-outer">
-        <div class="form-inner">
-            <form id="account" method="post">
+    <div class="form-outer edit">
+        <div class="form-inner edit">
+            <div>
+                <form id="account" method="post">
 
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-field">
-                    <input asp-for="@Model.Input.Email" class="form-input" placeholder="email" autocomplete="email" aria-required="true" />
-                    <span asp-validation-for="@Model.Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-field">
-                    <input asp-for="@Model.Input.Password" placeholder="password" class="form-input" autocomplete="current-password" aria-required="true" />
-                    <span asp-validation-for="@Model.Input.Password" class="text-danger"></span>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="form-button">Log in</button>
-                </div>
-            </form>
-
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-field">
+                        <input asp-for="@Model.Input.Email" class="form-input" placeholder="email" type="email" autocomplete="email" aria-required="true" />
+                        <span asp-validation-for="@Model.Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-field">
+                        <input asp-for="@Model.Input.Password" placeholder="password" class="form-input"  type="password" autocomplete="current-password" aria-required="true" />
+                        <span asp-validation-for="@Model.Input.Password" class="text-danger"></span>
+                    </div>
+                    <div>
+                        <button id="login-submit" type="submit" class="form-button">Log in</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </section>
