--- a/EweForum/Views/Shared/_Layout.cshtml
+++ b/EweForum/Views/Shared/_Layout.cshtml
@@ -8,10 +8,64 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/main.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EweForum.styles.css" asp-append-version="true" />
-    <script src="~/js/site.js"></script>  
+
 </head>
 <body>
-    @await Component.InvokeAsync("Header")
+    <header>
+        <ul class="nav justify-content-center header">
+            <li class="nav-item">
+                <a class="nav-link" aria="active" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+            </li>
+            @if (User.Identity != null && User.Identity.IsAuthenticated)
+            {
+
+                <li class="nav-item">
+                    <a id="manage" class="nav-link text-dark edit" asp-controller="Account" asp-action="Edit">Hello, @User.Identity.Name!</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">My Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Collections</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Browse</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Post</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" aria="active" id="logout" data-bs-toggle="modal" href="#"  data-bs-target="#confirmLogout">Logout</a>
+                </li>
+            }
+            else
+            {
+                <li class="nav-item">
+                    <a class="nav-link text-dark" aria="active" id="register" asp-controller="Account" asp-action="Register">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" aria="active" id="login" asp-controller="Account" asp-action="Login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" aria="active">Browse</a>
+                </li>
+            }
+        </ul>
+    </header>
+    <div class="modal fade" id="confirmLogout" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    Are you sure you want to logout?
+                </div>
+                <div class="modal-footer mt-3 d-flex justify-content-center">
+                    <button type="button" class="form-button" data-bs-dismiss="modal">Close</button>
+                    <button type="button"  id="confirm" class="form-button" onclick="() => logout(e.target)">Logout</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
