Add errors, fix warnings and validations and implement logic

--- a/EweForum/Views/Account/Edit.cshtml
+++ b/EweForum/Views/Account/Edit.cshtml
@@ -33,15 +33,24 @@
                 </div>
             </form>
         </div>
-        <div class="form-inner">
+        <div class="form-inner account-stats">
+             <div class="form-field ">
+                <a class="custom-href" href="@Url.Action("ChangePassword", "Account")">Change your password</a>
+            </div>
             <div class="form-field">
-                <a href="#">Change your password</a>
+                 <div class="stats">Active since: <span>Thu, 01 Jan 1993</span></div>
             </div>
-            <div class="form-field stats">
-                <div>Your topics: <span>102</span></div>
+            <div class="form-field ">
+                 <div class="stats">Country: <span>BG</span></div>
             </div>
-            <div class="form-field stats">
-                <div>Your posts: <span>322</span></div>
+            <div class="form-field ">
+                <div class="stats">Your topics: <span>102</span></div>
+            </div>
+            <div class="form-field  ">
+                <div class="stats">Your posts: <span>322</span></div>
+            </div>
+            <div class="form-field ">
+                <div class="stats">Contribution topics: <span>0</span></div>
             </div>
         </div>
     </div>
