--- a/EweForum/Views/Shared/_Layout.cshtml
+++ b/EweForum/Views/Shared/_Layout.cshtml
@@ -18,22 +18,36 @@
             </li>
             @if (User.Identity != null && User.Identity.IsAuthenticated)
             {
-
-                <li class="nav-item">
-                    <a id="manage" class="nav-link text-dark edit" asp-controller="Account" asp-action="Edit">Hello, @User.Identity.Name!</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">My Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Collections</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Browse</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Post</a>
-                </li>
+                @if (User.IsInRole("User"))
+                {
+                    <li class="nav-item">
+                        <a id="manage" class="nav-link text-dark edit" asp-controller="Account" asp-action="Edit">Hello, @User.Identity.Name!</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">My Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Collections</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Browse</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Post</a>
+                    </li>
+                }
+                if (@User.IsInRole("Admin"))
+                {
+                    <li class="nav-item">
+                        <a id="manage" class="nav-link text-dark edit" asp-controller="Account" asp-action="ManageAdminPanel">Hello, @User.Identity.Name!</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Manage Topics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Manage Forum Users</a>
+                    </li>
+                }
                 <li class="nav-item">
                     <a class="nav-link text-dark" aria="active" id="logout" data-bs-toggle="modal" href="#"  data-bs-target="#confirmLogout">Logout</a>
                 </li>
