--- a/EweForum/Views/Admin/ManageTopics.cshtml
+++ b/EweForum/Views/Admin/ManageTopics.cshtml
@@ -1,4 +1,9 @@
 ﻿@model PaginationModel<TopicViewModel>
+@{
+    var pageSizeList = new List<int>() { 5, 10, 20, 50, 100 }
+       .Select(g => new SelectListItem { Value = g.ToString(), Text = g.ToString()+" rows" }).ToList();
+    ViewBag.PageSizeList = pageSizeList;
+}
 <section>
 	<h3 class="text-center p-3">Admin Panel</h3>
     <div class="d-block">
@@ -25,10 +30,15 @@
 
                <h5>Manage Topics</h5>
                <a href="#"><h5>Create new</h5></a>
-               <form method="post">
+            <form id="pagination-form"   method="post" asp-route-page="@Model.PageIndex"  asp-controller="Admin" asp-action="ManageTopics">
                     <div>
-                        <input id="searchTerm" class="form-input w-75" placeholder="search" /><button type="submit" class="form-button">Search</button>
-                    </div>
+                    <input asp-for="@Model.SearchTerm" class="form-input w-75" type="text" value="@Model.SearchTerm" />
+                    <input asp-for="@Model.PageIndex" type="hidden" value="@Model.PageIndex"/>
+         
+                    
+                    <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="@Model.CurrentPageIndex" class="form-button"> Search </button>
+                    </div>                                                                                                                                             
+                    
                     <div>
                         <table class="topics-table">
                             <thead>
@@ -68,24 +78,25 @@
                             </tbody>
                         </table>
                         @if (Model.PageCount > 1)
-                        {   <input type="hidden" name="PageCount" value="@Model.PageCount"/>
-                            <input type="hidden" name="CurrentPageIndex" value="@Model.CurrentPageIndex"/>
-                            <input type="hidden" name="PageSize" value="@Model.PageSize"/>
-                            <input type="hidden" name="PageIndex" value="@Model.PageIndex"/>
+                        {   
                             <div class="table-pagination">
-                                @if (Model.CurrentPageIndex != 1)
+                                <button asp-route-page="@Model.CurrentPageIndex" asp-route-rows="@Model.PageSize" id="hidden-page-size-button" type="submit" class="hidden-button-pagination"></button>
+                                <select asp-for="@Model.PageSize" asp-items="@ViewBag.PageSizeList"  id="pagination-select-rows"  class="pagination-select"></select>
+                           
+                           
+                            @if (Model.CurrentPageIndex != 1)
                                 {
-                                    <button type="submit" asp-route-page="1">First</button>
+                                    <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="1">First</button>
                                 }
                                 @if (Model.CurrentPageIndex != 1 && Model.PageCount >= Model.CurrentPageIndex)
                                 {
-                                    <button type="submit" asp-route-page="@Model.CurrentPageIndex-1">Previous</button>
+                                <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@(Model.CurrentPageIndex-1)">Previous</button>
                                 }
                                 @for (int i = Model.CurrentPageIndex; i <= Model.CurrentPageIndex + 5; ++i)
                                 {
                                     if (i == Model.CurrentPageIndex)
                                     {
-                                        <button type="submit" asp-route-page="@i" class="current-index-page">@i</button>
+                                    <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@i" class="current-index-page">@i</button>
                                     }
                                     else if (i > Model.PageCount)
                                     {
@@ -93,16 +104,16 @@
                                     }
                                     else
                                     {
-                                        <button type="submit" asp-route-page="@i">@i</button>
+                                    <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@i">@i</button>
                                     }
                                 }
                                 @if (Model.CurrentPageIndex < Model.PageCount)
                                 {
-                                    <button type="submit" asp-route-page="@Model.CurrentPageIndex+1">Next</button>
+                                <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@(Model.CurrentPageIndex+1)">Next</button>
                                 }
                                 @if (Model.CurrentPageIndex != 1 && Model.PageIndex != Model.PageCount)
                                 {
-                                    <button type="submit" asp-route-page="@Model.PageCount">Last</button>
+                                <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@Model.PageCount">Last</button>
                                 }
 
                             </div>
