--- a/EweForum/Views/Admin/ManageTopics.cshtml
+++ b/EweForum/Views/Admin/ManageTopics.cshtml
@@ -1,8 +1,15 @@
 ﻿@model PaginationModel<TopicViewModel>
 @{
     var pageSizeList = new List<int>() { 5, 10, 20, 50, 100 }
-       .Select(g => new SelectListItem { Value = g.ToString(), Text = g.ToString()+" rows" }).ToList();
+       .Select(item => new SelectListItem { Value = item.ToString(), Text = item.ToString()+" rows" }).ToList();
     ViewBag.PageSizeList = pageSizeList;
+
+    var sortingOrderList = new List<string> {"None", "Date Created Ascending",
+    "Date Created Descending","Alphabetically","Popularity Ascending","Popularity Descending"}
+    .Select((item, index) => new SelectListItem
+    { Value = index.ToString(), Text = item }).ToList();
+    ViewBag.SortingOrderList = sortingOrderList;
+
 }
 <section>
 	<h3 class="text-center p-3">Admin Panel</h3>
@@ -30,7 +37,7 @@
 
                <h5>Manage Topics</h5>
                <a href="#"><h5>Create new</h5></a>
-            <form id="pagination-form"   method="post" asp-route-page="@Model.PageIndex"  asp-controller="Admin" asp-action="ManageTopics">
+                <form id="pagination-form" method="post" asp-route-page="@Model.PageIndex"    asp-controller="Admin" asp-action="ManageTopics">
                     <div>
                     <input asp-for="@Model.SearchTerm" class="form-input w-75" type="text" value="@Model.SearchTerm" />
                     <input asp-for="@Model.PageIndex" type="hidden" value="@Model.PageIndex"/>
@@ -38,88 +45,97 @@
                     
                     <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="@Model.CurrentPageIndex" class="form-button"> Search </button>
                     </div>                                                                                                                                             
-                    
-                    <div>
-                        <table class="topics-table">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Title</th>
-                                    <th>Description</th>
-                                    <th>Created on</th>
-                                    <th>Modified on</th>
-                                    <th>Popularity</th>
-                                    <th>Activity</th>
-
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model.Items)
-                                {
+                    @if(Model.Items.Count == 0)
+                    {
+                        <h4>No results</h4>
+                    }
+                    else
+                    {
+                        <div>
+                            <table class="topics-table">
+                                <thead>
                                     <tr>
-                                        <td>@item.Id</td>
-                                        <td>@item.Title</td>
-                                        <td>@item.Description</td>
-                                        <td>@item.CreatedOn</td>
-                                        <td>@item.ModifiedOn</td>
-                                        <td class="text-center">@item.UserCount</td>
-                                        <td>
-                                            @if (item.IsActive)
-                                            {
-                                                <span color="red">Inactive</span>
-                                            }
-                                            else
-                                            {
-                                                <span color="green">Active</span>
-                                            }
-                                        </td>
+                                        <th>#</th>
+                                        <th>Title</th>
+                                        <th>Description</th>
+                                        <th>Created on</th>
+                                        <th>Modified on</th>
+                                        <th>Popularity</th>
+                                        <th>Activity</th>
+
                                     </tr>
-                                }
-                            </tbody>
-                        </table>
-                        @if (Model.PageCount > 1)
-                        {   
-                            <div class="table-pagination">
-                                <button asp-route-page="@Model.CurrentPageIndex" asp-route-rows="@Model.PageSize" id="hidden-page-size-button" type="submit" class="hidden-button-pagination"></button>
-                                <select asp-for="@Model.PageSize" asp-items="@ViewBag.PageSizeList"  id="pagination-select-rows"  class="pagination-select"></select>
-                           
-                           
-                            @if (Model.CurrentPageIndex != 1)
-                                {
-                                    <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="1">First</button>
-                                }
-                                @if (Model.CurrentPageIndex != 1 && Model.PageCount >= Model.CurrentPageIndex)
-                                {
-                                <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@(Model.CurrentPageIndex-1)">Previous</button>
-                                }
-                                @for (int i = Model.CurrentPageIndex; i <= Model.CurrentPageIndex + 5; ++i)
-                                {
-                                    if (i == Model.CurrentPageIndex)
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model.Items)
                                     {
-                                    <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@i" class="current-index-page">@i</button>
+                                        <tr>
+                                            <td>@item.Id</td>
+                                            <td>@item.Title</td>
+                                            <td>@item.Description</td>
+                                            <td>@item.CreatedOn</td>
+                                            <td>@item.ModifiedOn</td>
+                                            <td class="text-center">@item.UserCount</td>
+                                            <td>
+                                                @if (item.IsActive)
+                                                {
+                                                    <span color="red">Inactive</span>
+                                                }
+                                                else
+                                                {
+                                                    <span color="green">Active</span>
+                                                }
+                                            </td>
+                                        </tr>
                                     }
-                                    else if (i > Model.PageCount)
-                                    {
-                                        break;
-                                    }
-                                    else
-                                    {
-                                    <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@i">@i</button>
-                                    }
-                                }
-                                @if (Model.CurrentPageIndex < Model.PageCount)
-                                {
-                                <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@(Model.CurrentPageIndex+1)">Next</button>
-                                }
-                                @if (Model.CurrentPageIndex != 1 && Model.PageIndex != Model.PageCount)
-                                {
-                                <button type="submit" asp-route-pageSize="@Model.PageSize"  asp-route-page="@Model.PageCount">Last</button>
-                                }
+                                </tbody>
+                            </table>
+                            @if (Model.PageCount > 1)
+                            {
+                                <div class="table-pagination">
+                                    <span>Sorting: </span>
+                                    <select asp-for="@Model.Order" asp-items="@ViewBag.SortingOrderList" id="pagination-select-order" class="pagination-select"></select>
+                                    <span>Page size: </span>
+                                    <select asp-for="@Model.PageSize" asp-items="@ViewBag.PageSizeList" id="pagination-select-rows" class="pagination-select"></select>
 
-                            </div>
 
-                        }
-                    </div>
+                                    @if (Model.CurrentPageIndex != 1)
+                                    {
+                                        <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="1">First</button>
+                                    }
+                                    @if (Model.CurrentPageIndex != 1 && Model.PageCount >= Model.CurrentPageIndex)
+                                    {
+                                        <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="@(Model.CurrentPageIndex-1)">Previous</button>
+                                    }
+                                    @for (int i = Model.CurrentPageIndex; i <= Model.CurrentPageIndex + 5; ++i)
+                                    {
+                                        if (i == Model.CurrentPageIndex)
+                                        {
+                                            <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="@i" class="current-index-page">@i</button>
+                                        }
+                                        else if (i > Model.PageCount)
+                                        {
+                                            break;
+                                        }
+                                        else
+                                        {
+                                            <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="@i">@i</button>
+                                        }
+                                    }
+                                    @if (Model.CurrentPageIndex < Model.PageCount)
+                                    {
+                                        <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="@(Model.CurrentPageIndex+1)">Next</button>
+                                    }
+                                    @if (Model.CurrentPageIndex != 1 && Model.PageIndex != Model.PageCount)
+                                    {
+                                        <button type="submit" asp-route-pageSize="@Model.PageSize" asp-route-page="@Model.PageCount">Last</button>
+                                    }
+
+                                </div>
+
+                            }
+                        </div>
+                    }
+                  
                 </form>
             </div>
             
