Fix UI of Topics, start working on editing topic and displaying users

--- a/EweForum/Views/Shared/_Layout.cshtml
+++ b/EweForum/Views/Shared/_Layout.cshtml
@@ -27,10 +27,10 @@
                         <a class="nav-link" href="#">My Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Collections</a>
+                        <a class="nav-link" asp-action="ManageTopics" asp-controller="Topic">All Topics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Browse</a>
+                        <a class="nav-link">Browse Feed</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">Post</a>
