--- a/EweForum/Views/Topic/ManageTopics.cshtml
+++ b/EweForum/Views/Topic/ManageTopics.cshtml
@@ -123,7 +123,7 @@
                                                 </td>
                                             }
                                             <td>
-                                                <span><a asp-route-id="@item.Id">View</a></span>
+                                                <span><a asp-route-topicId="@item.Id" asp-action="Edit" asp-controller="Topic">View</a></span>
                                                 @if(User.IsInRole("Admin")){
                                                     <span><a asp-route-id="@item.Id">Edit</a></span>
                                                 }
